feat: mock-nowcoder

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "db:migrate": "dotenv -e .env.local -- prisma migrate dev",
     "db:deploy": "dotenv -e .env.local -- prisma migrate deploy",
     "db:generate": "dotenv -e .env.local -- prisma generate",
-    "db:studio": "dotenv -e .env.local -- prisma studio --port 22888 --browser firefox",
+    "db:studio": "dotenv -e .env.local -- prisma studio --port 23777 --browser firefox",
+    "db:mock-n": "dotenv -e .env.local -- ts-node ./prisma/mock-n.ts",
     "————————————": "echo INFO: \"Below are commands for single app\" && exit 0",
     "dev:server": "dotenv -e .env.local -- nest start server --watch -b swc",
     "dev:mock-n": "dotenv -e .env.local -- nest start mock-n --watch -b swc",
