--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -50,6 +51,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "concurrently": "^8.2.2",
